[package]
name = "serde_literals"
version = "0.1.1"
edition = "2021"
description = "Support for serialising and deserialising literals directly into enum unit variants"
repository = "https://github.com/andrewlowndes/serde_literals"
license = "MIT OR Apache-2.0"
keywords = ["serde", "literals"]
categories = ["encoding", "development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
